--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -33,7 +33,7 @@
       <main>
         <div class="container text-start">
           <h2>Cadastrar - Agendamento de Potenciais Clientes</h2>
-          <p>Sistema utilizadado para agendamento de serviços</p>
+          <p>Sistema utilizado para agendamento de serviços.</p>
         </div>
         <form action="cadastro/salvar" method="POST">
 
