crud: create and read

--- a/views/atualizar.handlebars
+++ b/views/atualizar.handlebars
@@ -24,15 +24,14 @@
                 href="#"
               >Cadastrar</a>
               <a class="nav-link" href="/consultar">Consutar</a>
-              <a class="nav-link" href="/cadastrar">Atualizar</a>
             </div>
           </div>
         </div>
       </nav>
 
       <main>
-        <div class="container text-start">
-          <h2>Aualizar - Agendamento de Potenciais Clientes</h2>
+        <div class="container text-start mt-3">
+          <h2>Atualizar - Agendamento de Potenciais Clientes</h2>
           <p>Sistema utilizadado para agendamento de serviços</p>
         </div>
         <form action="atualizar/salvar" method="POST">
@@ -94,8 +93,7 @@
             <label for="floatingTextarea">Observação</label>
           </div>
           <div
-            style="margin-top: 20px;"
-            class="d-flex flex-row bd-highlight mb-3"
+            class="d-flex flex-row bd-highlight mb-3 mt-3"
           >
             <input
               class="btn btn-outline-primary"
