--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -31,11 +31,11 @@
       </nav>
 
       <main>
-        <div class="container text-start">
+        <div class="container text-start mt-3">
           <h2>Cadastrar - Agendamento de Potenciais Clientes</h2>
           <p>Sistema utilizado para agendamento de serviços.</p>
         </div>
-        <form action="cadastro/salvar" method="POST">
+        <form action="/cadastrar" method="POST">
 
           <div class="form-floating mb-3">
             <input
@@ -73,7 +73,7 @@
 
           <div class="form-floating mb-3">
             <input
-              name="data"
+              name="data_contato"
               type="date"
               class="form-control"
               id="floatingInput"
